testdata/baselines/reference/submodule/conformance/moduleExportAlias5.errors.txt
bug24754.js(4,1): error TS2631: Cannot assign to '"bug24754"' because it is a namespace.
bug24754.js(4,11): error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.


==== bug24754.js (2 errors) ====
    // #24754
    const webpack = function (){
    }
    exports = module.exports = webpack;
    ~~~~~~~
!!! error TS2631: Cannot assign to '"bug24754"' because it is a namespace.
              ~~~~~~
!!! error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
    exports.version = 1001;
    
    webpack.WebpackOptionsDefaulter = 1111;
    